--- a/TP3/docs/05-resultados.tex
+++ b/TP3/docs/05-resultados.tex
@@ -1,9 +1,7 @@
 \section{Resultados}
 
-\begin{frame}{lorem}
+\begin{frame}{Análisis de la presión}
     \begin{block}{lorem.}
 
     \end{block}
-
-
 \end{frame}
