--- a/TP3/docs/main.tex
+++ b/TP3/docs/main.tex
@@ -16,6 +16,8 @@
 \usepackage{latexsym,amsmath,xcolor,multicol,booktabs,calligra}
 \usepackage{graphicx,pstricks,listings,stackengine}
 \usepackage{lipsum}
+\usepackage{algpseudocode}
+
 
 \author{}
 \title{Dinámica Molecular Dirigida por Eventos}
@@ -31,6 +33,7 @@
 \usepackage{blkarray}
 \usepackage{caption}
 \usepackage{algorithmicx}
+
 
 % defs
 \def\cmd#1{\texttt{\color{red}\footnotesize $\backslash$#1}}
@@ -84,8 +87,7 @@
 % --- Thank you slide ---
     \begin{frame}
         \begin{center}
-            \LARGE
-            { ¡Muchas gracias por escuchar! }
+            \LARGE{ ¡Muchas gracias por escuchar! }
         \end{center}
     \end{frame}
 
