chore: simulations section

--- a/TP3/docs/01-introduccion.tex
+++ b/TP3/docs/01-introduccion.tex
@@ -27,10 +27,10 @@
     \begin{block}{Colisión entre partículas}
         \begin{equation*}
             \begin{aligned}
-                v_{x_i}^{d} &= v_{x_i}^{a} + \frac{J_x}{m_i} &
-                v_{x_j}^{d} &= v_{x_j}^{a} - \frac{J_x}{m_j} \\
-                v_{y_i}^{d} &= v_{y_i}^{a} + \frac{J_y}{m_i} &
-                v_{y_j}^{d} &= v_{y_j}^{a} - \frac{J_y}{m_j}
+                v_{x_i}^{d} &= v_{x_i}^{a} + \frac{J_x}{m_i} &&&
+                v_{x_j}^{d} = v_{x_j}^{a} - \frac{J_x}{m_j} \\
+                v_{y_i}^{d} &= v_{y_i}^{a} + \frac{J_y}{m_i} &&&
+                v_{y_j}^{d} = v_{y_j}^{a} - \frac{J_y}{m_j}
             \end{aligned}\label{eq:equation-particles-collision}
         \end{equation*}
         donde:
@@ -75,7 +75,7 @@
             \end{aligned}\label{eq:equation-particles-collision-obstacle}
         \end{equation*}
         donde:
-        \begin{minipage}[t]{0.6\linewidth}
+        \begin{minipage}[t]{0.5\linewidth}
             \begin{equation*}
                 \begin{aligned}
                     c_n &= 1 &
@@ -90,7 +90,7 @@
         \begin{minipage}[t]{0.2\linewidth}
             \begin{figure}[H]
                 \centering
-                \includegraphics[width=0.9\linewidth]{pic/01-intro/obstacle-collision-diagram}\label{fig:figure-obstacle-collision-diagram}
+                \includegraphics[width=1\linewidth]{pic/01-intro/obstacle-collision-diagram}\label{fig:figure-obstacle-collision-diagram}
             \end{figure}
         \end{minipage}
     \end{block}
