--- a/TP3/docs/05-resultados.tex
+++ b/TP3/docs/05-resultados.tex
@@ -1,7 +1,52 @@
 \section{Resultados}
 
-\begin{frame}{Análisis de la presión}
-    \begin{block}{lorem.}
+\begin{frame}{Colisión de Partículas Contra el Obstáculo}
+    \begin{block}{Solamente Primera Vez}
 
     \end{block}
+\end{frame}
+
+
+\begin{frame}{Colisión de Partículas Contra el Obstáculo}
+    \begin{block}{Más de una Vez}
+
+    \end{block}
+
+    \begin{multicols}{2}
+        {
+            \begin{figure}[H]
+                \centering
+                \includegraphics[width=0.8\linewidth]{pic/ejer3/b3Tiradas.png}
+                \text{$initialLiveCellsProportion = 0.10$}
+                \label{fig:conway2d:size:i10}
+            \end{figure}
+        }
+
+
+        {
+            \begin{figure}[H]
+                \centering
+                \includegraphics[width=0.8\linewidth]{pic/ejer3/bSoloSlopes.png}
+                \text{$initialLiveCellsProportion = 0.90$}
+                \label{fig:conway2d:size:i90}
+            \end{figure}
+        }
+    \end{multicols}
+
+\end{frame}
+
+
+\begin{frame}{Colisión de Partículas Contra el Obstáculo}
+    \begin{block}{Más de una Vez}
+
+    \end{block}
+
+    \begin{figure}[H]
+        \centering
+        \includegraphics[width=0.8\linewidth]{pic/ejer3/bObs.png}
+        \text{$initialLiveCellsProportion = 0.90$}
+        \label{fig:conway2d:size:i90}
+    \end{figure}
+
+    
 \end{frame}
