--- a/TP3/docs/04-simulaciones.tex
+++ b/TP3/docs/04-simulaciones.tex
@@ -41,7 +41,7 @@
     \begin{block}{Temperatura}
         \text{Proporcional a la energía cinética promedio de las partículas.}
         \begin{equation*}
-            T \propto v_{i}^{2}
+            T \propto v^{2}
         \end{equation*}
     \end{block}
 \end{frame}
