--- a/TP3/docs/06-conclusiones.tex
+++ b/TP3/docs/06-conclusiones.tex
@@ -1,9 +1,1 @@
-\section{Conclusiones}
-
-\begin{frame}{lorem}
-    \begin{block}{lorem.}
-
-    \end{block}
-
-
-\end{frame}
+\section{Conclusiones}\label{sec:conclusiones}
