--- a/TP3/docs/main.tex
+++ b/TP3/docs/main.tex
@@ -58,7 +58,7 @@
 %- --- --- --- --- --- --- --- --- --- --- --- --- --- --- ---
 \begin{document}
 
-    \begin{frame}
+    \begin{frame}[noframenumbering,plain]
         \titlepage
         \vspace*{-0.6cm}
         \begin{figure}[htpb]
@@ -66,12 +66,6 @@
                 \includegraphics[keepaspectratio, scale=0.15]{pic/itba}
             \end{center}\label{fig:figure-itba}
         \end{figure}
-    \end{frame}
-
-    \begin{frame}
-        \tableofcontents[sectionstyle=show,
-            subsectionstyle=show/shaded/hide,
-            subsubsectionstyle=show/shaded/hide]
     \end{frame}
 
 % Content --- --- --- --- --- --- --- --- --- --- --- ---
