--- a/TP3/docs/05-resultados.tex
+++ b/TP3/docs/05-resultados.tex
@@ -121,7 +121,6 @@
             \begin{figure}[H]
                 \centering
                 \includegraphics[width=0.8\linewidth]{pic/ejer3/b3Tiradas}
-                \text{Cantidad de colisiones en función del tiempo}
                 \label{fig:ejer3:btiradas}
             \end{figure}
         }
@@ -130,7 +129,6 @@
             \begin{figure}[H]
                 \centering
                 \includegraphics[width=0.8\linewidth]{pic/ejer3/bSoloSlopes}
-                \text{Regresión lineal}
                 \label{fig:ejer3:bslopes}
             \end{figure}
         }
@@ -177,11 +175,16 @@
 
 \begin{frame}{Partícula grande libre}
     \textbf{Desplazamiento cuadrático medio}
-    \begin{figure}[H]
-        \centering
-        \includegraphics[width=0.9\textwidth]{pic/05-results/dcm_graph}
-        \label{fig:dcm-graph}
-    \end{figure}
+    \begin{minipage}[c]{0.8\linewidth}
+        \begin{figure}[H]
+            \centering
+            \includegraphics[width=0.9\textwidth]{pic/05-results/dcm_graph}
+            \label{fig:dcm-graph}
+        \end{figure}
+    \end{minipage}
+    \begin{minipage}[c]{0.15\linewidth}
+        \text{$\Delta{t} = 0.05s$}
+    \end{minipage}
 \end{frame}
 
 \begin{frame}{Partícula grande libre}
