--- a/TP3/docs/06-conclusiones.tex
+++ b/TP3/docs/06-conclusiones.tex
@@ -1,1 +1,10 @@
 \section{Conclusiones}\label{sec:conclusiones}
+
+\begin{frame}{Conclusiones}
+    \begin{itemize}
+        \item Se cumple la ley de gases ideales ($P \propto T$).
+        \item A medida que aumenta la temperatura, se incrementa la cantidad de colisiones sobre un obstáculo de manera no lineal.
+        \item Se cumple el crecimiento lineal en el desplazamiento cuadrático medio de la partícula grande.
+    \end{itemize}
+\end{frame}
+
