chore: add exercise 1 latex section

--- a/TP4/docs/main.tex
+++ b/TP4/docs/main.tex
@@ -69,6 +69,7 @@
     \end{frame}
 
 % Content --- --- --- --- --- --- --- --- --- --- --- ---
+    \include{00-ejercicio1}
     \include{01-introduccion}
 %\include{02-modelo}    YA SE INCLUYEN EN 01-INTRODUCION
     \include{03-implementacion}
