--- a/TP4/docs/01-introduccion.tex
+++ b/TP4/docs/01-introduccion.tex
@@ -1,3 +1,14 @@
-\section{Ejercicio 02}\label{sec:ejercicio2}
+\section{Ejericico 2}\label{sec:ejer2}
+
 
 \section{Introducción}\label{sec:introduccion}
+\begin{frame}{Simulación regida por tiempo}
+    \textbf{Características:}
+    \begin{itemize}
+        \item 100 partículas confinadas en movimiento.
+        \item Cada partícula tiene definida su posición, velocidad, radio y masa.
+        \item Las partículas tienen interacciones elásticas entre ellas y con el contorno.
+        \item Las partículas viajan en línea recta y a velocidad constante entre colisiones.
+    \end{itemize}
+\end{frame}
+
