--- a/TP4/docs/06-conclusiones.tex
+++ b/TP4/docs/06-conclusiones.tex
@@ -1,1 +1,10 @@
 \section{Conclusiones}\label{sec:conclusiones}
+
+\begin{frame}{Conclusiones}
+    \Large{
+    \begin{itemize}
+        \item
+        \item Se cumple la relación $\omega_0 \propto \sqrt{k}$
+    \end{itemize}
+    }
+\end{frame}
