--- a/TP4/docs/05-resultados.tex
+++ b/TP4/docs/05-resultados.tex
@@ -12,13 +12,13 @@
     \end{minipage}
     \hfill
     \begin{minipage}{0.45\textwidth}
-        \begin{figure}[H]
-            \centering
-            \includegraphics[width=0.8\textwidth]{pic/05-results/system_animation}
-            \label{fig:system-animation}
-        \end{figure}
-        % TODO: Link to video
-        \tiny{\href{}{}}
+        \centering{
+            \begin{figure}[H]
+                \includegraphics[width=1\textwidth]{pic/05-results/system_animation}
+                \label{fig:system-animation}
+            \end{figure}
+            \tiny{\href{https://www.youtube.com/watch?v=GEmD58FVsSw}{https://www.youtube.com/watch?v=GEmD58FVsSw}}
+        }
     \end{minipage}
 \end{frame}
 
@@ -50,7 +50,7 @@
             \begin{equation*}
                 \begin{aligned}
                     \omega_0 &= 9.95\ \frac{1}{s} \\ \\
-                    D_{max}(\omega_0) &\approx 4.0095\ m
+                    H_{max}(\omega_0) &\approx 4.0095\ m
                 \end{aligned}
             \end{equation*}
         }
@@ -75,9 +75,9 @@
 
 \begin{frame}{Osciladores acoplados}
     \textbf{Relación entre la frecuencia de resonancia y la constante elástica}
-    \begin{figure}[H]
+    \begin{figure}
         \centering
-        \includegraphics[width=0.6\textwidth]{pic/05-results/prop_relation}
+        \includegraphics[width=0.7\textwidth]{pic/05-results/prop_relation}
         \label{fig:prop-relation}
     \end{figure}
 \end{frame}
