--- a/TP4/docs/05-resultados.tex
+++ b/TP4/docs/05-resultados.tex
@@ -57,7 +57,53 @@
     \end{minipage}
 \end{frame}
 
-%TODO: IPPO
+\begin{frame}
+    \begin{block}{Parámetros variables}
+        \begin{itemize}
+            \item $k \in \left\{100 kg/s^2, 2500 kg/s^2, 5000 kg/s^2, 7500 kg/s^2, 10000 kg/s^2\right\} $
+            \item $\omega \in [5, 15]$
+            \item $dt = \min\left(10^{-3}\,s, \frac{1}{100 \omega}\,s\right)$
+        \end{itemize}
+    \end{block}
+\end{frame}
+
+\begin{frame}{Analisis de $\omega_o$ variando $k$}
+    \begin{minipage}[c]{0.7\linewidth}
+        \begin{figure}[H]
+            \centering
+            \includegraphics[width=0.9\textwidth]{pic/05-results/amp_w_k}
+            \label{fig:amp_w_k}
+        \end{figure}
+    \end{minipage}
+    \begin{minipage}[c]{0.25\linewidth}
+        \large{
+            \begin{equation*}
+                \begin{aligned}
+                    dt = \min\left(10^{-3}\,s, \frac{1}{100 \omega}\,s\right)
+                \end{aligned}
+            \end{equation*}
+        }
+    \end{minipage}
+\end{frame}
+
+\begin{frame}{Analisis de $\omega_o$ variando $k$}
+%    \begin{minipage}[c]{0.7\linewidth}
+        \begin{figure}[H]
+            \centering
+            \includegraphics[width=0.7\textwidth]{pic/05-results/w_k}
+            \label{fig:w_k}
+        \end{figure}
+%    \end{minipage}
+%    \begin{minipage}[c]{0.25\linewidth}
+%        \large{
+%            \begin{equation*}
+%                \begin{aligned}
+%                    dt = \min\left(10^{-3}\,s, \frac{1}{100 \omega}\,s\right)
+%                \end{aligned}
+%            \end{equation*}
+%        }
+%    \end{minipage}
+\end{frame}
 
 \begin{frame}{Osciladores acoplados}
     \textbf{Ajuste lineal del factor de proporcionalidad}
