Principio de la presentación

--- a/TP4/docs/00-ejercicio1.tex
+++ b/TP4/docs/00-ejercicio1.tex
@@ -1,26 +1,49 @@
 \section{Ejercicio 01}\label{sec:ejercicio1}
 
 \begin{frame}{Oscilador Amortiguado}
-    \begin{itemize}
-            \item Masa de la partícula - $m = 70\ kg$
-            \item Tiempo de simulación - $tf = 5\ s$
-            \item Constante elástica - $k = 10000\ kg/s^2$
-            \item Viscosidad - $gamma = 100\ kg/s$
-            \item Amplitud inicial - $A = 1\ m$
+    \begin{multicols}{2}
+        % First column with the text
+        {
+        \begin{itemize}
+            \item Masa de la partícula - $m = 70\ \text{kg}$
+            \item Tiempo de simulación - $t_f = 5\ \text{s}$
+            \item Constante elástica - $k = 10000\ \text{kg/s}^2$
+            \item Viscosidad - $\gamma = 100\ \text{kg/s}$
+            \item Amplitud inicial - $A = 1\ \text{m}$
         \end{itemize}
-    \text{Animation :D https://youtu.be/X2C-ouZ1_7g}
+        }
+        {
+        % Second column with the "animation" image
+        \begin{figure}[H]
+            \centering
+            \includegraphics[width=1\linewidth]{pic/00-ejercicio1/thumbnail.png}\\
+            \captionsetup{font={scriptsize}}
+            \captionsetup{labelformat=empty}
+            \caption{https://www.youtube.com/watch?v=X2C-ouZ1_7g}
+        \end{figure}
+        }
+    \end{multicols}
+\end{frame}
+
+
+\begin{frame}{Oscilador Amortiguado}
+    \begin{figure}[htbp]
+        \centering
+        \includegraphics[width=0.9\linewidth]{pic/00-ejercicio1/todos.png}
+    \end{figure}
 \end{frame}
 
 \begin{frame}{Oscilador Amortiguado}
-    \begin{figure}[H]
-        \includegraphics[width=1\linewidth]{pic/00-ejercicio1/todos.png}\label{fig:osciladores}
-        \includegraphics[width=1\linewidth]{pic/00-ejercicio1/zoom.png}\label{fig:osciladoreszoom}
+    \begin{figure}[htbp]
+        \centering
+        \includegraphics[width=0.9\linewidth]{pic/00-ejercicio1/zoom.png}
     \end{figure}
 \end{frame}
 
 \begin{frame}{Oscilador Amortiguado}
     \begin{figure}[H]
         \centering
-        \includegraphics[width=1\linewidth]{pic/00-ejercicio1/ECMs.png}\label{fig:osciladore-ECM}
+        \includegraphics[width=0.9\linewidth]{pic/00-ejercicio1/ECMs.png}\label{fig:osciladore-ECM}
     \end{figure}
 \end{frame}
+
