--- a/TP4/docs/01-introduccion.tex
+++ b/TP4/docs/01-introduccion.tex
@@ -35,7 +35,7 @@
     \end{equation*}
 \end{frame}
 
-\begin{frame}{Ecuaciones}
+\begin{frame}{Modelo}
     \begin{block}{Fuerzas Partículas 1 a 99}
         \begin{equation*}
             \begin{aligned}
