--- a/TP4/docs/04-simulaciones.tex
+++ b/TP4/docs/04-simulaciones.tex
@@ -12,7 +12,7 @@
     \end{block}
     \begin{block}{Parámetros variables}
         \begin{itemize}
-            \item Frecuencia de oscilación de la partícula N - $\omega\ (rad/s)$
+            \item Frecuencia de oscilación de la partícula N - $\omega\ (1/s)$
             \item Constante elástica de los resortes - $k\ (kg/s^2)$
             \item Paso temporal de simulación - $dt\ (s)$
         \end{itemize}
